--- a/src/DMKOroCRM/Bundle/ContactBundle/Resources/views/BirthdayCalendar/widget/add.html.twig
+++ b/src/DMKOroCRM/Bundle/ContactBundle/Resources/views/BirthdayCalendar/widget/add.html.twig
@@ -1,6 +1,6 @@
 <div class="widget-content">
 
-{% set msg = added ? 'Birthday added' : 'Birthday removed' %}
+{% set msg = added ? 'dmkorocrm.contact.msg.birthday_added'|trans : 'dmkorocrm.contact.msg.birthday_removed'|trans %}
 
         <script type="text/javascript">
         require(['underscore', 'orotranslation/js/translator', 'oroui/js/widget-manager',
