--- a/src/DMKOroCRM/Bundle/ContactBundle/Resources/views/BirthdayCalendar/widget/showButton.html.twig
+++ b/src/DMKOroCRM/Bundle/ContactBundle/Resources/views/BirthdayCalendar/widget/showButton.html.twig
@@ -1,10 +1,12 @@
 {% import 'OroUIBundle::macros.html.twig' as UI %}
 
-{% set dialogTitle = 'dmkorocrm.contact.action.add_calendar.title'|trans %}
+<!-- WIRD NICHT VERWENDEN! -->
+{% set dialogTitle = entity.birthdaycal > 0 ? 
+		'dmkorocrm.contact.action.remove_calendar.title'|trans : 'dmkorocrm.contact.action.add_calendar.title'|trans %}
 {{ UI.clientButton({
       	'dataUrl': path('dmkorocrm_contact_addcalender', { 'contactId': entity.id }),
       	'aCss': 'no-hash',
-      	'iCss': 'icon-plus-sign',
+      	'iCss': 'icon-minus-sign',
       	'dataId': entity.id,
       	'title' : dialogTitle,
       	'label' : dialogTitle,
